--- a/p2.html
+++ b/p2.html
@@ -231,7 +231,12 @@
    
 
         })
-
+       
+            let x =1
+            let y = 3 
+            let z=x*y
+            console.log(z)
+        
 
 
 
