--- a/p3.html
+++ b/p3.html
@@ -63,6 +63,7 @@
       background-color: unset;
       margin: 0 2% 0 2%;
       /* transition: 1s; */
+      border: unset;
     }
 
     .card.active {
@@ -115,7 +116,7 @@
   <div class="chose">
     <div class="card transition">
       <div class="card_wrap" >
-        <img class="back img" data-val="a1" src="img/資產 6.svg">
+        <img class="back img" data-val="a1" src="img/pink.svg">
         <img class="front img" src="img/C.png" alt="">
       </div>
     </div>
